# norrskensstugan

backend/: .cspell.json  Cargo.toml  sqlite.db
backend/migrations/: 20230326124742_initial.up.sql  20230326125946_login_tokens.up.sql  20230326134518_password_not_null.down.sql  20230326134518_password_not_null.up.sql  20230326173700_timespans.down.sql  20230326173700_timespans.up.sql
backend/src/: lib.rs  main.rs
backend/src/database/: mod.rs  timespans.rs  users.rs
backend/src/routes/: login.rs
