[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sha3 = "0.9"
actix-web = "4"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite" ]  }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.94"
serde = {version="1.0.158", features=['derive']}
rand = "0.8.5"
rustyline = "11.0.0"
